# ManualsGraph

./: .gitignore  ANALYSIS-KG-Extraction-Strategy.md  README.md  pyproject.toml
miguel_task/: RESEARCH_NOTES.md  manualsgraph_mock.html  task_2.ipynb  task_3.ipynb
scripts/: llamaindex-processing.py  sort_pdfs.py
