[project]
name = "manuals-graph"
version = "0.1.0"
description = "Knowledge graph extraction from technical manuals using LlamaIndex and Azure OpenAI"
authors = [
    {name = "Xelerit"}
]
requires-python = ">=3.10,<3.14"
dependencies = [
    # Documentation
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    
    # Code quality
    "pre-commit>=4.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    
    # PDF Processing
    "pypdf>=6.0.0",
    "tqdm>=4.66.0",
    
    # Azure OpenAI and LlamaIndex
    "llama-index>=0.14.0",
    "llama-index-llms-azure-openai>=0.4.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    
    # Internet Archive scraping
    "internetarchive>=5.0.0",
]

[tool.uv]
# Use Python 3.12 for best compatibility with pandas and other scientific packages
# Python 3.14 is too new and many packages don't have prebuilt wheels yet
python-version = "3.12" 